# quizling

./: .env.example  .gitignore  IMPLEMENTATION.md  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  test-backend.yml  test-frontend.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/examples/: advanced_usage.py  basic_usage.py
backend/src/quizling/: __main__.py
examples/: advanced_usage.py  basic_usage.py  simple.py
frontend/: .dockerignore  .env.production  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts  endpoints.test.ts  endpoints.ts  errors.ts  index.ts  questions.test.ts  questions.ts
frontend/src/hooks/: README.md  index.ts  useDebounce.test.ts  useDebounce.ts  useQuestion.test.ts  useQuestion.ts  useQuestions.test.ts  useQuestions.ts  useQuiz.test.ts  useQuiz.ts
frontend/src/pages/: HomePage.test.tsx  HomePage.tsx  NotFoundPage.test.tsx  NotFoundPage.tsx  QuestionDetailPage.test.tsx  QuestionDetailPage.tsx  QuestionsPage.test.tsx  QuestionsPage.tsx  QuizPage.test.tsx  QuizPage.tsx
frontend/src/test/: README.md  factories.ts  (+2 more)
src/quizling/: __init__.py  __main__.py  file_reader.py  generator.py  models.py  quiz_writer.py
tests/: __init__.py  test_file_reader.py  test_generator.py  test_models.py
tests/quizling/: test_file_reader.py  test_generator.py  test_main.py  test_models.py  test_quiz_writer.py
(+76 files in other folders)
